--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -68,10 +68,26 @@
    line-height: 20px
    color: #3763BA
    text-decoration: none
-   padding-left: 42px
+   padding-left: 35px
+   span
+    position: relative
+    transition: all 0.3s
+    &::after
+     content: ""
+     display: block
+     height: 1px
+     width: 0%
+     bottom: -3px
+     left: 50%
+     position: absolute
+     transition: all 0.3s
+     background-color: #000
+    &:hover::after
+     left: 0
+     width: 100%
    &:first-child
     padding-left: 0
-    padding-right: 27px
+    padding-right: 35px
     border-right: 2px solid#E54D24
    &:hover
     opacity: 0.7
