--- a/sass/_home.sass
+++ b/sass/_home.sass
@@ -1,22 +1,58 @@
-.fullpage, body
-    position: relative
-    background: #F0F4FC
-@media(min-width: 768px)
-    section
-        transition: all 0.7s
-        &.notNormal
-            transform: scale(3)
-            filter: blur(40px)
-            opacity: 0.5
+$finalHeight: 100vw
+$finalWidth: 3 * $finalHeight
+$scrollBarHeight: 1px
+::-webkit-scrollbar
+    width: $scrollBarHeight
+    height: $scrollBarHeight
+
+::-webkit-scrollbar-button
+    width: $scrollBarHeight
+    height: $scrollBarHeight
+
+// .fullpage, body
+//     position: relative
+// .fullpage
+//     position: absolute
+//     display: block
+//     top: 100vh
+//     left: 0
+//     height: 100vw
+//     min-width: 100vh
+//     margin: 0
+//     background: #abc
+//     overflow-y: auto
+//     overflow-x: hidden
+//     transform: rotate(-90deg)
+//     transform-origin: left top
+//     will-change: transform
+//     & > section
+//         display: block
+//         transform: rotate(90deg) translateY(-100vh)
+//         transform-origin: left top
+// @media(min-width: 1200px)
+//     section
+        // transform: rotate(90deg) translateY(2000px)
+        // transform-origin: right top
+        // width: 100vw
+        // height: 100vh
+        // &.notNormal
+        //     transform: scale(3)
+        //     filter: blur(40px)
+        //     opacity: 0.5
+    // .fullpage
+    //     & > section
+    //         width: 100vw
+    //         height: 100vh
+    //         margin-bottom: calc(100vw - 100vh)
+
 .main
-    min-height: 100vh
+    // min-height: 100vh
     padding-top: 153px
     padding-bottom: 92px
     background: #F0F4FC
     height: 100%
     position: relative
     transition: all 0.7s
-    z-index: 999
     &__top
         display: flex
         justify-content: space-between
@@ -114,6 +150,8 @@
                     stroke: transparent
         &:hover
             transform: scale(1.1)
+.home-features__el
+    position: relative
 .home
     &-features
         min-height: 100vh
@@ -153,18 +191,10 @@
                 color: #1B1B19
             path
                 transition: all 0.3s
-        &__el:hover
-            .home-features__block
+            &.back
                 background-color: #3763BA
-                transform: rotateX(360deg)
                 span
                     color: #FFFFFF
-            &:nth-child(1),&:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(7)
-                path
-                    fill: #fff
-            &:nth-child(5), &:nth-child(6),&:nth-child(8)
-                path
-                    stroke: #fff
         &__img
             width: 50px
             height: 50px
@@ -471,6 +501,9 @@
         &__title
             font-size: 75px
     .home
+        &-features
+            &__wrap
+                grid-template-columns: repeat(5, 1fr)
         &-contacts
             &__last
                 width: calc(100% - 350px)
@@ -488,14 +521,59 @@
                     position: static
                 &-top, textarea
                     width: 100%
-@media(max-width: 1199px)
+@media (min-width: 1200px) and (max-height: 750px)
+    .home
+        &-contacts
+            padding-top: 120px
+            padding-bottom: 10px
+            &__adress
+                font-size: 15px
+            &__place
+                font-size: 15px
+                margin-bottom: 15px
+            &__img
+                height: 170px
+            &__last
+                margin-top: -60px
+            &__people
+                margin-bottom: 20px
+        &-nums
+            &__wrap
+                grid-gap: 30px 60px
+        &-features
+            padding-bottom: 10px
+            padding-top: 130px
+            &__title
+                margin-bottom: 25px
+            &__block
+                padding: 20px
+                span
+                    font-size: 16px
     .main
+        padding-top: 140px
+        padding-bottom: 40px
+        &__top
+            margin-bottom: 30px
+        &__prod
+            &-img
+                height: 160px
+                width: 100%
+                svg
+                    max-height: 100%
+@media(max-width: 1199px)
+    body, html
+        overflow: visible
+    .main
+        position: static
+        padding: 80px 0
         &__title
             font-size: 65px
         &__wrap
             padding: 0
     .home
         &-features
+            min-height: 100px
+            padding: 80px 0
             &__wrap
                 grid-template-columns: repeat(3, 1fr)
             &__el
@@ -504,8 +582,12 @@
                 &:nth-child(8)
                     grid-column: auto
         &-nav
+            min-height: 100px
             background-size: contain
+            padding: 80px 0
         &-contacts
+            min-height: 100px
+            padding: 80px 0
             &__wrap
                 display: block
             &__main
@@ -513,6 +595,16 @@
             &__last
                 width: 100%
                 padding-top: 50px
+    .fullpage
+        position: static
+        transform: none
+        height: auto
+        min-width: auto
+        & > section
+            transform: none
+            margin-bottom: 0
+            min-height: 0
+            height: auto
 @media(max-width: 991px)
     .main
         &__top
@@ -615,10 +707,13 @@
                 line-height: 9.38vw
                 margin-bottom: 12.81vw
             &__el
+                height: auto
+                margin-bottom: 30px
                 display: none
             &__wrap
                 display: block
             &__block
+                height: auto
                 margin-bottom: 5.63vw
                 border-radius: 4.38vw
                 padding: 6.88vw 5vw
