--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -91,9 +91,18 @@
     border-right: 2px solid#E54D24
    &:hover
     opacity: 0.7
+@media (min-width: 1200px) and (max-height: 750px)
+ .header
+  padding: 10px 0
+  &__top
+   img
+    max-height: 55px
+  &__call
+   height: 55px
 @media(max-width: 1199px)
  .header
   background-color: #F0F4FC
+  position: static
   &__main, &__info
    grid-gap: 30px
 @media(max-width: 991px)
