--- a/sass/_popup.sass
+++ b/sass/_popup.sass
@@ -15,7 +15,15 @@
         padding: 40px 0
 .popup-wrap
     max-width: 100%
+    position: relative
 .popup
+    &-ya
+        width: 1120px
+        max-width: 100%
+        height: 523px
+        border-radius: 27px
+        overflow: hidden
+        position: relative
     &-close
         transition: all 0.3s
         width: 35px
@@ -29,6 +37,11 @@
         &:hover
             cursor: pointer
             transform: rotate(90deg)
+        &__ya
+            right: 50%
+            margin-right: -17px
+            top: -50px
+            z-index: 999
     &-call
         padding: 60px 80px
         padding-bottom: 75px
@@ -97,6 +110,9 @@
         &-close
             right: 25px
             top: 25px
+            &__ya
+                right: 50%
+                top: -50px
         &-rekv
             padding: 40px
             &__cont
@@ -108,6 +124,13 @@
                     margin-top: 30px
 @media(max-width: 575px)
     .popup
+        &-ya
+            height: 90vh
+            border-radius: 27px 27px 0 0
+            div,iframe
+                height: 100%
+        &-wrap__ya
+            padding-top: 10vh
         &-rekv
             max-width: 100vw
             width: 100vw
@@ -133,6 +156,9 @@
             height: 6.25vw
             img
                 width: 100%
+            &__ya
+                right: 50%
+                top: 5vw
         &-call
             max-width: 100vw
             width: 100vw
